# tiny-utf8

./: .travis.yml  CMakeLists.txt  LICENCE  Makefile  README  README.md  build.bat  clean.bat  compile.bat  execute.bat  input.txt  main.cpp  template.pnproj  template.pnps  test.txt  tinyutf8.cpp  tinyutf8.h
docs/: CMakeLists.txt  Layout.xlsx
include/: tinyutf8.h  wstring.h
include/tinyutf8/: tinyutf8.h  tinyutf8.hpp
lib/: tinyutf8.cpp
source/: test.cpp  tinyutf8.cpp  wstring.cpp
test/: CMakeLists.txt  make.bat  test.cpp  test.txt  test64.txt
test/src/: test_construction.cpp  test_conversion.cpp  test_iterators.cpp  test_manipulation.cpp  test_noexceptions.cpp  test_search.cpp
test/src/helpers/: helpers_ssotestutils.cpp  helpers_ssotestutils.h
test/src/mocks/: mock_nothrowallocator.cpp  mock_nothrowallocator.h  mock_throwallocator.cpp  mock_throwallocator.h
